# fsmomc

./: .clang-format  .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md
configs/: demo_defconfig
include/: fsmomc.h  version.h.in
source/: fsmomc.c
test/: CMakeLists.txt  actions.cpp  add_rules.cpp  add_state.cpp  init.cpp  tans_state.cpp  test.cpp  test_main.cpp  version.cpp
